--- a/index.html
+++ b/index.html
@@ -6,15 +6,28 @@
   <link rel="icon" type="image/png" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Supreeth Gollapally | Portfolio</title>
+
+  <!-- SEO -->
+  <meta name="description" content="Supreeth Gollapally — Full-Stack Developer & Software Engineer skilled in React, Node.js, Python, and cloud technologies. Explore my projects and experience." />
+  <meta name="author" content="Supreeth Gollapally" />
+  <meta name="theme-color" content="#030303" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Supreeth Gollapally | Portfolio" />
+  <meta property="og:description" content="Full-Stack Developer & Software Engineer. Explore my projects, skills, and experience." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://supreethgollapally.me/" />
+
+  <!-- Fonts: non-blocking load — preload the CSS, swap media to all once loaded.
+       This removes Google Fonts from the render-blocking chain entirely. -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Syne:wght@400;700;800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Syne:wght@400;700;800&display=swap"></noscript>
 </head>
 
 <body>
   <div id="root"></div>
-  <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
